crates/carta/tests/snapshots/golden_writer__revealjs__links__autolink-decoded-label.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p><a href="http://example.com/a%20b">http://example.com/a%20b</a></p>
<p><a href="http://example.com/a%20b">http://example.com/a b</a></p>
</section>
