crates/carta/tests/snapshots/golden_writer__revealjs__links__title-with-quote.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<section class="slide level6">

<p><a href="http://example.com/" title="a&quot;b title">x</a></p>
<p><a href="http://example.com/" title="a&quot;b&#39;c title">y</a></p>
</section>
